--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "request": "^2.83.0"
   }
 }
